<resources>
    <string name="app_name">Oriental CPV</string>
    <string name="ok">OK</string>

    <string name="alert_dialog_title">Running Since</string>
    <string name="positive_button_text">Select</string>
    <string name="negative_button_text">Cancel</string>
    <string name="yes">Yes</string>
    <string name="nooo">No</string>
    <string name="confirm_logout">You will need to re-enter your credentials. Are you sure you want to log out?</string>
    <string name="faq">FAQ</string>
    <string name="new_visit_record">New Visit Record</string>
    <string name="visit_record_history">Visit Record History</string>
    <string name="logout">Logout</string>
    <string name="select_images">Select Images</string>
    <string name="kyc_document_obtained_firm">KYC Document obtained(Firm)</string>
    <string name="kyc_document_obtained_proprietor">KYC document obtained(Proprietor)</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="subm">SUBMIT</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="fa">FAQ</string>
    <string name="enter_otp">ENTER OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="submi">Submit</string>
    <string name="sol_id">SOl ID</string>
    <string name="record_history">RECORD HISTORY</string>
    <string name="select_date">SELECT DATE</string>
    <string name="logg">Logout</string>
    <string name="name">Name</string>
    <string name="view">View</string>
    <string name="click">Click</string>
    <string name="pf_number">PF Number</string>
    <string name="name_of_proprietor">Name of Proprietor</string>
    <string name="aadhaar_number">Aadhaar Number</string>
    <string name="firm_name">Firm Name</string>
    <string name="date_of_visit">Date of Visit</string>
    <string name="account_number">Account Number</string>
    <string name="address">Address</string>
    <string name="nature_of_business_activity">Nature of business activity</string>
    <string name="running_since">Running Since</string>
    <string name="contact_number">Contact Number</string>
    <string name="remarks">Remarks</string>
    <string name="remark">Remarks</string>
    <string name="next">Next</string>
    <string name="user_id">User ID</string>
    <string name="date_visit">Date of Visit</string>
    <string name="name_of_the_firm_contacted">Name of the firm contacted</string>
    <string name="visit_record_no">Visit Record no.</string>
    <string name="resend">Resend</string>
    <string name="account_no">Account Number</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="logou">Logout</string>
    <string name="crash_toast_text">App crashed ! Please select mailing app and click send to report this error !</string>
    <string name="visit_record">Visit Record History</string>
    <string name="app_name_CRG">Oriental CRG</string>
    <string name="view_remarks">View Remarks</string>
    <string name="NetworkNoResponse">Its taking too much time to respond!
        Please try after some time.</string>


</resources>
