<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rel"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#4bb134"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="7dp"
            android:src="@drawable/back_icon"/>

        <TextView
            android:id="@+id/sol_idd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="#000"
            android:layout_marginLeft="4dp"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/back"
            android:gravity="center"
            android:textSize="@dimen/comon_text_size"
            android:text="" />

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/logg"
            android:textAllCaps="false"
            android:textSize="@dimen/comon_text_size"
            android:layout_marginLeft="5dp"
            android:textColor="#000"
            android:background="@drawable/logout"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_centerInParent="true"
            android:gravity="center" />

    </RelativeLayout>



    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
        android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:background="#aef49e"
    android:fillViewport="true"
        android:layout_below="@+id/rel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textSize="@dimen/comon_text_size"/>

    <EditText
        android:id="@+id/vist_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_custem"
        android:textSize="@dimen/comon_text_size"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:paddingLeft="7dp"
        android:hint="@string/name"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/pf_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textSize="@dimen/comon_text_size"/>


    <EditText
        android:id="@+id/pf_number"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_custem"
        android:textSize="@dimen/comon_text_size"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:maxLength="6"
        android:paddingLeft="7dp"
        android:hint="@string/pf_number"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/name_prii"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/comon_text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal">


        <Spinner
            android:id="@+id/salutation_Spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textStyle="bold"
            android:layout_weight=".7"
            android:textColor="#000000"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:background="@drawable/edit_custem"
            android:gravity="center"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/proprietor_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_custem"
            android:textSize="@dimen/comon_text_size"
            android:layout_weight=".3"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:paddingLeft="7dp"
            android:hint="@string/name_of_proprietor"
            android:textColor="#000000" />


    </LinearLayout>

    <TextView
        android:id="@+id/aad_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/comon_text_size"/>

    <EditText
        android:id="@+id/aadhar_no"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_custem"
        android:textSize="@dimen/comon_text_size"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:paddingLeft="7dp"
        android:maxLength="12"
        android:hint="@string/aadhaar_number"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/fi_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/comon_text_size"/>

    <EditText
        android:id="@+id/firm_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_custem"
        android:textSize="@dimen/comon_text_size"
        android:imeOptions="actionNext"
        android:paddingLeft="7dp"
        android:singleLine="true"
        android:hint="@string/firm_name"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/visit_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/comon_text_size"/>

    <EditText
        android:id="@+id/visit_date"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_custem"
        android:textSize="@dimen/comon_text_size"
        android:imeOptions="actionNext"
        android:editable="false"
        android:paddingLeft="7dp"
        android:hint="@string/date_of_visit"
        android:textColor="#000000" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:text="@string/account_no"
        android:textSize="@dimen/comon_text_size"/>
    <EditText
        android:id="@+id/acc_no"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_custem"
        android:textSize="@dimen/comon_text_size"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:maxLength="14"
        android:paddingLeft="7dp"
        android:hint="@string/account_number"
        android:textColor="#000000" />


    <TextView
        android:id="@+id/aad_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/comon_text_size"/>
    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_custem"
        android:textSize="@dimen/comon_text_size"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:paddingLeft="7dp"
        android:hint="@string/address"
        android:textColor="#000000" />


    <TextView
        android:id="@+id/buss_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/comon_text_size"/>
    <EditText
        android:id="@+id/buss_nature"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_custem"
        android:textSize="@dimen/comon_text_size"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:paddingLeft="7dp"
        android:hint="@string/nature_of_business_activity"
        android:textColor="#000000" />


    <TextView
        android:id="@+id/running_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/comon_text_size"/>
    <EditText
        android:id="@+id/date_time"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_custem"
        android:textSize="@dimen/comon_text_size"
        android:editable="false"
        android:onClick="show"
        android:focusable="false"
        android:paddingLeft="7dp"
        android:hint="@string/running_since"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/con_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/comon_text_size"/>
    <EditText
        android:id="@+id/con_num"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_custem"
        android:textSize="@dimen/comon_text_size"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:maxLength="10"
        android:inputType="number"
        android:paddingLeft="7dp"
        android:hint="@string/contact_number"
        android:textColor="#000000" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remarks"
        android:textColor="#000"
        android:textSize="@dimen/comon_text_size"/>

    <EditText
        android:id="@+id/remarks"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:background="@drawable/edit_custem"
        android:textSize="@dimen/comon_text_size"
        android:imeOptions="actionDone"
        android:gravity="start"
        android:layout_marginBottom="50dp"
        android:singleLine="true"
        android:paddingLeft="7dp"
        android:hint="@string/remark"
        android:textColor="#000000" />

    <Button

        android:id="@+id/Submit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="@dimen/comon_text_size"
        android:textColor="@color/white"
        android:background="#4bb134"
        android:text="@string/next"/>



</LinearLayout>
</ScrollView>



</RelativeLayout>
