<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="20dp">


        <ImageView
            android:id="@+id/Img_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            app:srcCompat="@drawable/imgpsh_fullsiz" />
        <!--    android:src="@drawable/imgpsh_fullsiz"-->
        <!--       -->


        <android.support.design.widget.TextInputLayout
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Img_app"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_id"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textSize="@dimen/comon_text_size" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/user_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textSize="@dimen/comon_text_size" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/pass"
            android:layout_marginTop="8dp"
            android:background="#4bb134"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/comon_text_size" />


        <TextView
            android:id="@+id/forg_pass"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/login_button"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/forgot_pass"
            android:textSize="@dimen/comon_text_size" />

        <TextView
            android:id="@+id/faq"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/forg_pass"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/fa"
            android:textSize="@dimen/comon_text_size" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ftr" />

</RelativeLayout>